--- a/Cleaning the Twitter Data.ipynb
+++ b/Cleaning the Twitter Data.ipynb
@@ -2168,7 +2168,9 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
