--- a/Preparing Data for Time Series.ipynb
+++ b/Preparing Data for Time Series.ipynb
@@ -1410,8 +1410,8 @@
     }
    ],
    "source": [
-    "# Create column to view the percent change in open prices\n",
-    "# Create a column that looks at the difference between opening price and yesterday's close price\n",
+    "# Create column to view the change in open prices from prior days close\n",
+    "# Create a column that labels whether the open-close difference was positive or negative\n",
     "\n",
     "stock_prices['open_close_diff'] = stock_prices.Open - stock_prices.Close.shift(1)\n",
     "stock_prices['pos_neg'] = stock_prices['pos_neg'] = stock_prices.open_close_diff.apply(lambda x: 1 if (x > 0) else (-1 if x < 0 else 0))\n",
