add readme pics

--- a/Final Time Series-Copy1.ipynb
+++ b/Final Time Series-Copy1.ipynb
@@ -605,13 +605,15 @@
     "        \n",
     "        # Turn prediction values into classification values (if the prediction is < 0, the class label will be -1; \n",
     "        # if the prediction is = 0, the class label will be 0; if the prediction is < 0, the class label will be 1)\n",
-    "        predictions_df['class_predictions'] = predictions_df.predictions.map(lambda x: 1 if (x >0) else(-1 if x <0 else 0))\n",
+    "        predictions_df['class_predictions'] = predictions_df.predictions.map(lambda x: 1 if (x >0) \n",
+    "                                                                             else(-1 if x <0 else 0))\n",
     "        \n",
     "        print('Accuracy: ', accuracy_score(predictions_df[endogenous], predictions_df.class_predictions))\n",
     "        \n",
     "        # View model precision for classifying each class \n",
     "        # (will print as [precision for prediction class -1, precision for preiction class 0, precision for class 1])\n",
-    "        print('Precision: ', precision_score(predictions_df[endogenous], predictions_df.class_predictions, average=None))\n",
+    "        print('Precision: ', precision_score(predictions_df[endogenous], \n",
+    "                                             predictions_df.class_predictions, average=None))\n",
     "        \n",
     "        # Call function to print confusion matrix\n",
     "        plot_confusion_matrix(predictions_df[endogenous], predictions_df.class_predictions, endogenous, exongenous)\n",
@@ -620,19 +622,23 @@
     "        \n",
     "        # Turn open_close_diff into classification values (if the prediction is < 0, the class label will be -1; \n",
     "        # if the prediction is = 0, the class label will be 0; if the prediction is < 0, the class label will be 1)\n",
-    "        predictions_df[endogenous+'_class'] = predictions_df[endogenous].map(lambda x: 1 if (x >0) else(-1 if x <0 else 0))\n",
+    "        predictions_df[endogenous+'_class'] = predictions_df[endogenous].map(lambda x: 1 if (x >0) \n",
+    "                                                                             else(-1 if x <0 else 0))\n",
     "        \n",
     "        # Turn prediction values into classification values (if the prediction is < 0, the class label will be -1; \n",
     "        # if the prediction is = 0, the class label will be 0; if the prediction is < 0, the class label will be 1)\n",
-    "        predictions_df['class_predictions'] = predictions_df.predictions.map(lambda x: 1 if (x >-.3) else(-1 if x <-.3 else 0))\n",
+    "        predictions_df['class_predictions'] = predictions_df.predictions.map(lambda x: 1 if (x >-.3) \n",
+    "                                                                             else(-1 if x <-.3 else 0))\n",
     "        print(predictions_df['class_predictions'].mean())\n",
     "        \n",
     "        # View model precision for classifying each class \n",
     "        # (will print as [precision for prediction class -1, precision for preiction class 0, precision for class 1])\n",
-    "        print('Precision: ', precision_score(predictions_df[endogenous+'_class'], predictions_df.class_predictions, average=None))\n",
+    "        print('Precision: ', precision_score(predictions_df[endogenous+'_class'], \n",
+    "                                             predictions_df.class_predictions, average=None))\n",
     "        \n",
     "        # Call function to print confusion matrix\n",
-    "        plot_confusion_matrix(predictions_df[endogenous+'_class'], predictions_df.class_predictions, endogenous, exongenous)\n",
+    "        plot_confusion_matrix(predictions_df[endogenous+'_class'], predictions_df.class_predictions, \n",
+    "                              endogenous, exongenous)\n",
     "    \n",
     "    # View Maximum and Minimum actual and prediction values \n",
     "    print('\\n')\n",
@@ -3313,7 +3319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3338,6 +3344,7 @@
     "    # Predict off of best model\n",
     "    pred = model.predict(start=285, end=380, exog = exog_test)\n",
     "    print('ARIMAX model MSE:{}'.format(mean_squared_error(test,pred)))\n",
+    "    print('\\n')\n",
     "    \n",
     "    # Create predicition dataframe\n",
     "    predictions_df = pd.DataFrame(pred, columns= ['predictions'])\n",
@@ -3360,8 +3367,11 @@
     "        except:\n",
     "            continue\n",
     "        \n",
-    "    predictions_df['class_predictions'] = predictions_df.predictions.map(lambda x: 1 if (x >final_cutoff) else(-1 if x <final_cutoff else 0))\n",
-    "    print(final_cutoff)\n",
+    "    predictions_df['class_predictions'] = predictions_df.predictions.map(lambda x: 1 if (x >final_cutoff) \n",
+    "                                                                         else(-1 if x <final_cutoff else 0))\n",
+    "    \n",
+    "    print('Final cutt-off: ', final_cutoff)\n",
+    "    print('\\n')\n",
     "            \n",
     "            \n",
     "        \n",
@@ -3391,7 +3401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -3403,7 +3413,7 @@
       "Dep. Variable:        open_close_diff   No. Observations:                  285\n",
       "Model:               SARIMAX(3, 1, 4)   Log Likelihood                -941.106\n",
       "Date:                Tue, 01 Oct 2019   AIC                           1900.212\n",
-      "Time:                        16:44:10   BIC                           1933.053\n",
+      "Time:                        17:11:32   BIC                           1933.053\n",
       "Sample:                             0   HQIC                          1913.379\n",
       "                                - 285                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -3431,7 +3441,11 @@
       "\n",
       "\n",
       "ARIMAX model MSE:26.040037638830388\n",
-      "-0.3\n",
+      "\n",
+      "\n",
+      "Final cutt-off:  -0.3\n",
+      "\n",
+      "\n",
       "Precision:  [0.53333333 0.         0.58823529]\n",
       "\n",
       "\n",
@@ -3578,7 +3592,7 @@
        "2019-03-11                 -1  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3598,6 +3612,13 @@
    "source": [
     "model_and_predict_final('open_close_diff', 'sentiment_1')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
